<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2025 Blocker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name" translatable="false">Blocker</string>
    <string name="apps">Apps</string>
    <string name="rules">Rules</string>
    <string name="trackers">Trackers</string>
    <string name="search">Search</string>
    <string name="firewall">Firewall</string>
    <string name="no_permission_hint">Unable to obtain permission, the application may not function properly.</string>
    <string name="shell_permission_hint">Granted shell permission. Controlling components may not function properly.</string>
    <string name="system_permission_hint">Running in system mode (UID 1000). Intent Firewall is available.</string>
    <string name="close">Close</string>
</resources>
