<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2025 Blocker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="feature_applist_sort_menu">Sort menu</string>
    <string name="feature_applist_settings">Settings</string>
    <string name="feature_applist_support_and_feedback">Support and feedback</string>
    <string name="feature_applist_app_name" translatable="false">Blocker</string>
    <string name="feature_applist_no_applications_to_display">No applications to display</string>
    <string name="feature_applist_sort_options">Sort options</string>
    <string name="feature_applist_sort_by">Sort by</string>
    <string name="feature_applist_order">Order</string>
    <string name="feature_applist_ascending">Ascending</string>
    <string name="feature_applist_descending">Descending</string>
    <string name="feature_applist_name">Name</string>
    <string name="feature_applist_install_date">Install Date</string>
    <string name="feature_applist_last_updated">Last Updated</string>
    <string name="feature_applist_show_running_apps_on_top">Show running apps on top</string>
    <string name="feature_applist_on">On</string>
    <string name="feature_applist_off">Off</string>
</resources>
