...
                    SnackbarHost(
                        hostState = snackbarHostState,
                    )
                },
                bottomBar = {
                    if (appState.shouldShowBottomBar) {
                        BlockerBottomBar(
                            destinations = appState.topLevelDestinations,
                            onNavigateToDestination = appState::navigateToTopLevelDestination,
                            currentTopLevelDestination = appState.currentTopLevelDestination,
                            modifier = Modifier.testTag("BlockerBottomBar"),
                        )
                    }
...
                            WindowInsets.safeDrawing.only(
                                WindowInsetsSides.Horizontal,
                            ),
                        ),
                ) {
                    if (appState.shouldShowNavRail) {
                        BlockerNavRail(
                            destinations = appState.topLevelDestinations,
                            onNavigateToDestination = appState::navigateToTopLevelDestination,
                            currentTopLevelDestination = appState.currentTopLevelDestination,
                            modifier = Modifier
                                .testTag("BlockerNavRail")
                                .safeDrawingPadding(),
...
