...
    <string name="core_ui_app_info">App info</string>
    <string name="core_ui_activity_with_count">Activity (%1$d)</string>
    <string name="core_ui_service_with_count">Service (%1$d)</string>
    <string name="core_ui_receiver_with_count">Receiver (%1$d)</string>
    <string name="core_ui_provider_with_count">Provider (%1$d)</string>
    <string name="core_ui_initializing_database">Initializing database</string>
    <string name="core_ui_more_menu">More menu</string>
    <string name="core_ui_search_icon">Search</string>
    <string name="core_ui_block_all_components">Block all components</string>
    <string name="core_ui_enable_all_components">Enable all components</string>
    <string name="core_ui_open_app_detail">Open app detail</string>
    <string name="core_ui_open_rule_detail">Open rule detail</string>
    <string name="core_ui_sort_options">Sort options</string>
    <string name="core_ui_collapse_list">Collapse list</string>
    <string name="core_ui_expand_list">Expand more</string>
    <string name="core_ui_close">Close</string>
    <string name="core_ui_block_selected">Block selected</string>
    <string name="core_ui_select_all">Select all</string>
    <string name="core_ui_enable_selected">Enable selected</string>
...
